--- a/src/style.css
+++ b/src/style.css
@@ -224,6 +224,7 @@ button:focus {
   transform: scale(1.1);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   max-width: 100%;
+  max-height: 300px;
   height: auto;
 }
 
