--- a/src/style.css
+++ b/src/style.css
@@ -275,11 +275,12 @@ button:focus {
 }
 @media (max-width: 768px) {
   .home-header {
-    padding-top: 20px !important;
+    padding-top: 10px !important;
   }
 }
 
 .home-section {
+  min-height: 100vh;
   position: relative;
   z-index: -1;
   background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
@@ -294,7 +295,12 @@ button:focus {
   color: whitesmoke;
   text-align: left;
 }
-
+@media (max-width: 767px) {
+  .home-content {
+    color: whitesmoke;
+    text-align: left;
+  }
+}
 .heading {
   font-size: 2.4em !important;
   padding-left: 50px !important;
